# RESTful-product-manage-API

./: .dockerignore  .gitignore  README.md  answers.txt  manage.py  pyproject.toml
devops/: Dockerfile  docker-compose.yml  init.sql
scripts/: entrypoint.sh  init.sh  test.sh
src/: admin.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/endpoint/: category.py  health.py  product.py
src/exception/: __init__.py  product.py
src/fixtures/: categories.json  coupons.json  products.json
src/management/commands/: load_initial_data.py
src/middleware/: pagination.py  response.py
src/models/: __init__.py  _base.py  category.py  coupon.py  product.py
src/schema/: product.py
src/serializers/: category.py  coupon.py  product.py
src/serializers/http/: request.py  response.py
src/service/: category.py  product.py
src/service/_adpator/: category.py  coupon.py  product.py
src/templates/: base.html  product_detail.html  product_list.html
src/tests/: conftest.py
src/tests/integration/: test_product_api.py
src/tests/integration/api/: test_api_product.py
src/tests/unit/: test_models.py
src/tests/unit/models/: test_models_category.py  test_models_product.py
src/tests/unit/utils/: test_calculations.py
src/usecase/: category.py  product.py
src/usecase/_adaptor/: category.py  coupon.py  product.py
src/utils/: calculations.py
src/utils/http/: response.py
src/views/: product.py
